==> SiliconLabs/third_party_hw_drivers_extension/driver/public/silabs/nfctag2_nt3h2111/src/mikroe_nt3h2111.c <==
#include <string.h>
#include "em_gpio.h"
#include "sl_sleeptimer.h"
#include "mikroe_nt3h2111.h"
#define min(a, b) (((a) < (b)) ? (a) : (b))

sl_status_t nt3h2111_init(sl_i2cspm_t *i2cspm)
{
  if (i2cspm == NULL) {
    return SL_STATUS_NULL_POINTER;
  }

  // If already initialized, return status
  if (nt3h2111_is_initialized == true) {
    return SL_STATUS_ALREADY_INITIALIZED;
  }

  // Update i2cspm instance and i2c addr
  nt3h2111_i2cspm_instance = i2cspm;

#if defined(MIKROE_NT3H211_FD_PORT) && defined(MIKROE_NT3H211_FD_PIN)
  GPIO_PinModeSet(MIKROE_NT3H211_FD_PORT,
                  MIKROE_NT3H211_FD_PIN,
                  gpioModeInputPullFilter,
                  1);
#endif

  return SL_STATUS_OK;
}

sl_status_t nt3h2111_deinit(void)
{
  if (nt3h2111_i2cspm_instance == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }

  // De-initialization tasks
#if defined(MIKROE_NT3H211_FD_PORT) && defined(MIKROE_NT3H211_FD_PIN)
  GPIO_PinModeSet(MIKROE_NT3H211_FD_PORT,
                  MIKROE_NT3H211_FD_PIN,
                  gpioModeDisabled,
                  1);
#endif
  // Mark driver as not initialized
  nt3h2111_i2cspm_instance = false;

  return SL_STATUS_OK;
}
