==> SiliconLabsSoftware/third_party_hw_drivers_extension/driver/public/silabs/nfctag2_nt3h2111/src/mikroe_nt3h2111.c <==
#include <string.h>
#include "sl_sleeptimer.h"
#include "mikroe_nt3h2111.h"
#include "mikroe_nt3h2111_config.h"
#include "drv_i2c_master.h"
#include "drv_digital_in.h"
#define min(a, b) (((a) < (b)) ? (a) : (b))

sl_status_t nt3h2111_init(mikroe_i2c_handle_t i2cspm)
{
  if (i2cspm == NULL) {
    return SL_STATUS_NULL_POINTER;
  }

  // If already initialized, return status
  if (nt3h2111_is_initialized == true) {
    return SL_STATUS_ALREADY_INITIALIZED;
  }

  // Update i2cspm instance and i2c addr
  s_nt3h2111.i2c.handle = i2cspm;

  i2c_master_config_t i2c_cfg;
  i2c_master_configure_default(&i2c_cfg);

  i2c_cfg.addr = MIKROE_NT3H211_ADDR;
  i2c_cfg.timeout_pass_count = 0;

#if (MIKROE_NT3H211_I2C_UC == 1)
  i2c_cfg.speed = MIKROE_NT3H211_I2C_SPEED_MODE;
#endif

  if (i2c_master_open(&s_nt3h2111.i2c, &i2c_cfg) == I2C_MASTER_ERROR) {
    return SL_STATUS_INITIALIZATION;
  }

#if defined(MIKROE_NT3H211_FD_PORT) && defined(MIKROE_NT3H211_FD_PIN)
  pin_name_t pin = hal_gpio_pin_name(MIKROE_NT3H211_FD_PORT,
                                     MIKROE_NT3H211_FD_PIN);

  digital_in_init(&s_nt3h2111.fd_pin, pin);
#endif

  return SL_STATUS_OK;
}

sl_status_t nt3h2111_deinit(void)
{
  if (s_nt3h2111.i2c.handle == false) {
    return SL_STATUS_NOT_INITIALIZED;
  }
  i2c_master_close(&s_nt3h2111.i2c);

  // Mark driver as not initialized
  nt3h2111_is_initialized = false;

  return SL_STATUS_OK;
}
